--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">EECS4443Lab3</string>
+    <string name="taskloggerizer">TaskLoggerizer</string>
+    <string name="create_a_new_task_below">Create a new task below</string>
+    <string name="title">Title:</string>
+    <string name="add_task_title">Add task title</string>
+    <string name="deadline">Deadline:</string>
+    <string name="description">Description:</string>
+    <string name="create_task">Create Task</string>
+    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
+    <string name="add_task_description">Add task description</string>
+    <string name="cancel">Cancel</string>
 </resources>
