Added short click and long click functionalities for SharedPreferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">EECS4443Lab3</string>
     <string name="taskloggerizer">TaskLoggerizer</string>
     <string name="create_a_new_task_below">Create a new task below</string>
+    <string name="update_the_task_below">Update the task below</string>
     <string name="title">Title:</string>
     <string name="add_task_title">Add task title</string>
     <string name="deadline">Deadline:</string>
@@ -11,5 +12,6 @@
     <string name="add_task_description">Add task description</string>
     <string name="cancel">Cancel</string>
     <string name="add_task">Add Task</string>
+    <string name="save">Save</string>
     <string name="task_deadline">Deadline: %s</string>
 </resources>
